--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Your Name Here</a>.
+        Coded by <a href="https:/github.com/pineapplegoose">pineapplegoose</a>.
     </div>
     <script src="isdn.js"></script>
 </body>
